--- a/gpio.service
+++ b/gpio.service
@@ -7,7 +7,7 @@ Type=simple
 Restart=always
 User=root
 WorkingDirectory=/opt/gpio/
-ExecStart=/usr/local/bin/gunicorn gpio:app -b 127.0.0.1:11002
+ExecStart=/opt/gpio/venv/bin/gunicorn app:app -b 127.0.0.1:11002
 
 [Install]
 WantedBy=multi-user.target
